make the button bigger

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <button id="btnHitMe"" type=" button">Hit Me!</button>
+  <button id="btnHitMe"" type="button" style="width: 200px; height: 100px">Hit Me!</button>
   <h3 id="lblGrund"></h3>
 
   <script type="module">
